Update and rename index.htm to index.html

--- a/index.html
+++ b/index.html
@@ -23,23 +23,23 @@
 									<div role="presentation" class="html-div xdj266r x14z9mp xat24cr x1lziwak x14ctfv x13sv91t x6ikm8r x10wlt62 xerhiuh x1pn3fxy x10zy8in xm9bcq3 x1n2onr6 x1vjfegm x1k4qllp x1mzt3pk x13faqbe x1xr0vuk x1jm4cbz x114wg8e xrrpcnn x14rx4xb x13fuv20 x18b5jzi x1q0q8m5 x1t7ytsu x19livfd x1h2krnu x3p3xfz xet2kk3 xaymx6s x1lu5o8o x1ou5ly4 xofb2d2">
 										<span class="x193iq5w xeuugli x13faqbe x1vvkbs x1xmvt09 x1lliihq x1s928wv xhkezso x1gmr53x x1cpjm7i x1fgarty x1943h6x xudqn12 x3x7a5m x6prxxf xvq8zen xo1l8bm xzsf02u" dir="auto">
 										<div dir="auto" class="html-div xexx8yu xyri2b x18d9i69 x1c1uobl x1gslohp x14z9mp x12nagc x1lziwak x1yc453h x126k92a x18lvrbx">
-											* &quot;My nevíme: Vìøíme v náhodu a 
-											doufáme, e bude stát pøi nás.&quot; <br>
-											* &quot;My nevíme: Jsme jediná strana, 
-											která se nebojí pøiznat, e neví!&quot;
+											* &quot;My nevÃ­me: VÄ›Å™Ã­me v nÃ¡hodu a 
+											doufÃ¡me, Å¾e bude stÃ¡t pÅ™i nÃ¡s.&quot; <br>
+											* &quot;My nevÃ­me: Jsme jedinÃ¡ strana, 
+											kterÃ¡ se nebojÃ­ pÅ™iznat, Å¾e nevÃ­!&quot;
 											<br>
-											* &quot;My nevíme: Protoe i nevìdomost 
-											je síla, zvláš kdy se spojíme!&quot;
+											* &quot;My nevÃ­me: ProtoÅ¾e i nevÄ›domost 
+											je sÃ­la, zvlÃ¡Å¡Å¥ kdyÅ¾ se spojÃ­me!&quot;
 											<br>
-											* &quot;My nevíme: Nejsme experti na 
-											politiku, ale to neznamená, e se 
-											nemùeme snait!&quot; <br>
-											* &quot;My nevíme: Zbytek stran u ví, co 
-											se dìje, a podívejte se, jak to 
-											dopadá.&quot; <br>
-											* &quot;My nevíme: Pro všechny, kteøí se 
-											u nechtìjí nechat vést tìmi, co si 
-											myslí, e ví.&quot;</div>
+											* &quot;My nevÃ­me: Nejsme experti na 
+											politiku, ale to neznamenÃ¡, Å¾e se 
+											nemÅ¯Å¾eme snaÅ¾it!&quot; <br>
+											* &quot;My nevÃ­me: Zbytek stran uÅ¾ vÃ­, co 
+											se dÄ›je, a podÃ­vejte se, jak to 
+											dopadÃ¡.&quot; <br>
+											* &quot;My nevÃ­me: Pro vÅ¡echny, kteÅ™Ã­ se 
+											uÅ¾ nechtÄ›jÃ­ nechat vÃ©st tÄ›mi, co si 
+											myslÃ­, Å¾e vÃ­.&quot;</div>
 										</span></div>
 								</div>
 							</div>
@@ -59,12 +59,12 @@
 					<div role="presentation" class="html-div xdj266r x14z9mp xat24cr x1lziwak x14ctfv x13sv91t x6ikm8r x10wlt62 xerhiuh x1pn3fxy x10zy8in xm9bcq3 x1n2onr6 x1vjfegm x1k4qllp x1mzt3pk x13faqbe x1xr0vuk x1jm4cbz x114wg8e xrrpcnn x14rx4xb x13fuv20 x18b5jzi x1q0q8m5 x1t7ytsu x19livfd x1h2krnu x3p3xfz xet2kk3 xaymx6s x1lu5o8o x1ou5ly4 xofb2d2">
 						<span class="x193iq5w xeuugli x13faqbe x1vvkbs x1xmvt09 x1lliihq x1s928wv xhkezso x1gmr53x x1cpjm7i x1fgarty x1943h6x xudqn12 x3x7a5m x6prxxf xvq8zen xo1l8bm xzsf02u" dir="auto">
 						<div dir="auto" class="html-div xexx8yu xyri2b x18d9i69 x1c1uobl x1gslohp x14z9mp x12nagc x1lziwak x1yc453h x126k92a x18lvrbx">
-							* &quot;My nevíme, ale víme, e se to dá zlepšit!&quot; <br>
-							* &quot;Nejistota je naše platforma: My nevíme, kam 
-							jdeme, ale pùjdeme tam spolu!&quot; <br>
-							* &quot;My nevíme: Vìøíme, e zmìna je nevyhnutelná, i 
-							kdy nevíme, co to bude.&quot; <br>
-							* &quot;My nevíme: Jsme volba pro všechny, kteøí u mají 
+							* &quot;My nevÃ­me, ale vÃ­me, Å¾e se to dÃ¡ zlepÅ¡it!&quot; <br>
+							* &quot;Nejistota je naÅ¡e platforma: My nevÃ­me, kam 
+							jdeme, ale pÅ¯jdeme tam spolu!&quot; <br>
+							* &quot;My nevÃ­me: VÄ›Å™Ã­me, Å¾e zmÄ›na je nevyhnutelnÃ¡, i 
+							kdyÅ¾ nevÃ­me, co to bude.&quot; <br>
+							* &quot;My nevÃ­me: Jsme volba pro vÅ¡echny, kteÅ™Ã­ uÅ¾ majÃ­ 
 							dost jistot!&quot; <br>
 &nbsp;</div>
 						</span></div>
@@ -80,46 +80,46 @@
 		<div dir="auto" class="html-div xexx8yu xyri2b x18d9i69 x1c1uobl x1gslohp x14z9mp x12nagc x1lziwak x1yc453h x126k92a x18lvrbx">
 			<p align="center">
 			<b class="html-b xdj266r x14z9mp xat24cr x1lziwak xexx8yu xyri2b x18d9i69 x1c1uobl x1hl2dhg x16tdsg8 x1vvkbs">
-			<font size="4">Nevìdomost jako cesta k lepší budoucnosti </font></b>
+			<font size="4">NevÄ›domost jako cesta k lepÅ¡Ã­ budoucnosti </font></b>
 			</p>
 			<p align="center">
 			<b class="html-b xdj266r x14z9mp xat24cr x1lziwak xexx8yu xyri2b x18d9i69 x1c1uobl x1hl2dhg x16tdsg8 x1vvkbs">
-			Úvodem: </b>Vítáme vás v politickém hnutí &quot;My nevíme&quot;. Nestojíme na 
-			pevnıch základech dogmat a pøedem danıch øešení. <br>
-			Místo toho se hlásíme k principu otevøeného uvaování, pokory a 
-			neustálého uèení. Vìøíme, e v dnešním sloitém svìtì je 
-			&quot;nevìdomost&quot; nejen pøirozená, ale i nezbytná. <br>
-			Právì v ní se toti skrıvá potenciál pro inovace, adaptaci a 
-			skuteènou zmìnu.<br>
+			Ãšvodem: </b>VÃ­tÃ¡me vÃ¡s v politickÃ©m hnutÃ­ &quot;My nevÃ­me&quot;. NestojÃ­me na 
+			pevnÃ½ch zÃ¡kladech dogmat a pÅ™edem danÃ½ch Å™eÅ¡enÃ­. <br>
+			MÃ­sto toho se hlÃ¡sÃ­me k principu otevÅ™enÃ©ho uvaÅ¾ovÃ¡nÃ­, pokory a 
+			neustÃ¡lÃ©ho uÄenÃ­. VÄ›Å™Ã­me, Å¾e v dneÅ¡nÃ­m sloÅ¾itÃ©m svÄ›tÄ› je 
+			&quot;nevÄ›domost&quot; nejen pÅ™irozenÃ¡, ale i nezbytnÃ¡. <br>
+			PrÃ¡vÄ› v nÃ­ se totiÅ¾ skrÃ½vÃ¡ potenciÃ¡l pro inovace, adaptaci a 
+			skuteÄnou zmÄ›nu.<br>
 			<br>
 			<b class="html-b xdj266r x14z9mp xat24cr x1lziwak xexx8yu xyri2b x18d9i69 x1c1uobl x1hl2dhg x16tdsg8 x1vvkbs">
-			<font size="5"><u>Problémy, které chceme øešit</u>:<br>
+			<font size="5"><u>ProblÃ©my, kterÃ© chceme Å™eÅ¡it</u>:<br>
 			</font><br>
-			<font size="4">Pøehnaná jistota a dogmatismus: <br>
-			</font></b><font size="4">Dnes se èasto setkáváme s politiky, kteøí 
-			si jsou naprosto jistí svımi názory, a odmítají naslouchat jinım. To 
-			vede k rigiditì, stagnaci a neschopnosti reagovat na nové vızvy.<b class="html-b xdj266r x14z9mp xat24cr x1lziwak xexx8yu xyri2b x18d9i69 x1c1uobl x1hl2dhg x16tdsg8 x1vvkbs"><br>
+			<font size="4">PÅ™ehnanÃ¡ jistota a dogmatismus: <br>
+			</font></b><font size="4">Dnes se Äasto setkÃ¡vÃ¡me s politiky, kteÅ™Ã­ 
+			si jsou naprosto jistÃ­ svÃ½mi nÃ¡zory, a odmÃ­tajÃ­ naslouchat jinÃ½m. To 
+			vede k rigiditÄ›, stagnaci a neschopnosti reagovat na novÃ© vÃ½zvy.<b class="html-b xdj266r x14z9mp xat24cr x1lziwak xexx8yu xyri2b x18d9i69 x1c1uobl x1hl2dhg x16tdsg8 x1vvkbs"><br>
 			<br>
-			Ztráta dùvìry v experty a instituce: <br>
-			</b>Mnoho lidí cítí frustraci z toho, e experti a politické elity 
-			slibují øešení, která nefungují, nebo se dokonce zhoršují.<b class="html-b xdj266r x14z9mp xat24cr x1lziwak xexx8yu xyri2b x18d9i69 x1c1uobl x1hl2dhg x16tdsg8 x1vvkbs"><br>
+			ZtrÃ¡ta dÅ¯vÄ›ry v experty a instituce: <br>
+			</b>Mnoho lidÃ­ cÃ­tÃ­ frustraci z toho, Å¾e experti a politickÃ© elity 
+			slibujÃ­ Å™eÅ¡enÃ­, kterÃ¡ nefungujÃ­, nebo se dokonce zhorÅ¡ujÃ­.<b class="html-b xdj266r x14z9mp xat24cr x1lziwak xexx8yu xyri2b x18d9i69 x1c1uobl x1hl2dhg x16tdsg8 x1vvkbs"><br>
 			<br>
-			Polarizace spoleènosti: <br>
-			</b>Neustálé zdùrazòování rozdílù a &quot;pravdy&quot; jedné strany vede k 
-			rozdìlení spoleènosti a neschopnosti konstruktivnì diskutovat.
+			Polarizace spoleÄnosti: <br>
+			</b>NeustÃ¡lÃ© zdÅ¯razÅˆovÃ¡nÃ­ rozdÃ­lÅ¯ a &quot;pravdy&quot; jednÃ© strany vede k 
+			rozdÄ›lenÃ­ spoleÄnosti a neschopnosti konstruktivnÄ› diskutovat.
 			</font>
 			<b class="html-b xdj266r x14z9mp xat24cr x1lziwak xexx8yu xyri2b x18d9i69 x1c1uobl x1hl2dhg x16tdsg8 x1vvkbs">
 			<font size="4"><br>
 			<br>
-			Naše øešení : My nevíme, ale snaíme se</font></b></div>
+			NaÅ¡e Å™eÅ¡enÃ­ : My nevÃ­me, ale snaÅ¾Ã­me se</font></b></div>
 		</span></div>
 </div>
 </span>
 <p align="left">&nbsp;</p>
 <p align="left">&nbsp;</p>
-<p align="left">kontakt: 3x se probìhnout okolo kostela Nanebevzetí panny Marie 
-ve St, Plzenci mezi 1 - 3 hodinnou noèní, vykøíkovat &quot;Many&quot; a mít s sebou 
-alespoò basu piv pro mluvèího strany Davida &quot;Manyho&quot; Haòáka.</p>
+<p align="left">kontakt: 3x se probÄ›hnout okolo kostela NanebevzetÃ­ panny Marie 
+ve St, Plzenci mezi 1 - 3 hodinnou noÄnÃ­, vykÅ™Ã­kovat &quot;Many&quot; a mÃ­t s sebou 
+alespoÅˆ basu piv pro mluvÄÃ­ho strany Davida &quot;Manyho&quot; HaÅˆÃ¡ka.</p>
 
 </body>
 
